--- a/index.css
+++ b/index.css
@@ -12,6 +12,8 @@
     --text-color: black;
     /* --text-color: #D8F3DC; */
     --accent-color: dodgerblue;
+    --overlay-size: 96px;
+    --overlay-radius: 32px;
 }
 
 body {
@@ -122,7 +124,7 @@ main[data-page="home"] .image-div img.avatar {
 }
 
 main[data-page="home"] .image-div .img-overlay {
-    width: 96px;
+    width: var(--overlay-size);
     aspect-ratio: 1;
     background-color: var(--main-bg);
     position: absolute;
@@ -136,13 +138,13 @@ main[data-page="home"] .image-div .img-holder:hover .img-overlay {
 main[data-page="home"] .image-div #overlaybl {
     bottom: 0;
     left: 0;
-    border-radius: 0 2rem 0 0;
+    border-radius: 0 var(--overlay-radius) 0 0;
 }
 
 main[data-page="home"] .image-div #overlaytr {
     top: 0;
     right: 0;
-    border-radius: 0 0 0 2rem;
+    border-radius: 0 0 0 var(--overlay-radius);
 }
 
 main[data-page="stack"] {
@@ -254,4 +256,72 @@ main[data-page="projects"] .projects .project-card a.card-link {
 
 .hidden {
     display: none !important;
+}
+
+@media (max-width: 675px) {
+    :root {
+        --overlay-size: 64px;
+        --overlay-radius: 16px;
+    }
+
+    header {
+        padding: .5rem 1rem;
+    }
+
+    main {
+        padding: .5rem !important;
+    }
+    
+    main[data-page="home"] {
+        grid-template-columns: 1fr;
+    }
+
+    main[data-page="home"] .about-me {
+        font-size: 1.2rem;
+    }
+
+    main[data-page="home"] .about-me .title {
+        font-size: 3rem;
+    }
+
+    main[data-page="home"] .about-me .socials a {
+        border-radius: .5rem;
+        border-bottom-color: var(--effect-color);
+        box-shadow: 0 2px 8px 0px var(--effect-color);
+    }
+
+    main[data-page="home"] .image-div {
+        grid-row: 1;
+        max-width: 95vw;
+    }
+
+    main[data-page="home"] .image-div .img-holder {
+        max-width: 95vw;
+    }
+
+    main[data-page="home"] .image-div .img-holder img {
+        max-width: 95vw;
+    }
+
+    main[data-page="stack"] {
+        grid-template-columns: 1fr;
+        grid-template-rows: repeat(3, 1fr);
+    }
+
+    main[data-page="stack"] .tools {
+        grid-column: span 1;
+    }
+
+    main[data-page="stack"] .icon-card {
+        box-shadow: 2px 2px 6px 0px var(--effect-color);
+    }
+
+    main[data-page="projects"] .projects {
+        grid-template-columns: 1fr;
+    }
+
+    main[data-page="projects"] .projects .project-card {
+        padding: 1rem;
+        box-shadow: 4px 4px 8px 1px #333;
+    }
 }
